@@ -1,2 +1,2 @@
-version: "Catalina, Revision 1"
-date: "2020-10-06"
+version: "Big Sur, Revision 1"
+date: "2020-10-XX"
