@@ -1,6 +1,6 @@
-title: "macOS 10.15: Security Configuration - 800-171"
+title: "macOS 11.0: Security Configuration - 800-171"
 description: |
-  This guide describes the actions to take when securing a macOS 10.15 system against the NIST SP 800-171.
+  This guide describes the actions to take when securing a 11.0 system against the NIST SP 800-171.
 profile:
   - section: "authentication"
     rules:
