@@ -1,6 +1,6 @@
-title: "macOS 10.15: Security Configuration - 800-53 High"
+title: "macOS 11.0: Security Configuration - 800-53 High"
 description: |
-  This guide describes the actions to take when securing a macOS 10.15 system against the NIST SP 800-53 HIGH baseline.  
+  This guide describes the actions to take when securing a macOS 11.0 system against the NIST SP 800-53 HIGH baseline.  
 profile:
   - section: "authentication"
     rules:
