@@ -1,6 +1,6 @@
-title: "macOS 10.15: Security Configuration - All Rules"
+title: "macOS 11.0: Security Configuration - All Rules"
 description: |
-  This guide describes the actions to take when securing a macOS 10.15 system using every available rule.  
+  This guide describes the actions to take when securing a macOS 11.0 system using every available rule.  
 profile:
   - section: "authentication"
     rules:
